bitwarden/bitwarden-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
      - name: bitwarden
        image: vaultwarden/server:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
spec:
  selector:
    app: bitwarden
  ports:
  - port: 8080
    targetPort: 80
